# WinAutoSave

./: CLAUDE.md  Cargo.toml  README.md
src/: config.rs  hotkey.rs  keyboard.rs  main.rs  tray.rs  window.rs
